modificando el package.json

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "workbox-streams": "^6.5.3"
   },
   "scripts": {
-    "start": "set PORT=4012 && react-scripts start",
+    "start": "react-scripts start",
+    "run": "set PORT=4012 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
