--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "workbox-strategies": "^6.5.3",
     "workbox-streams": "^6.5.3"
   },
+  "engines": {
+    "node": "14.17.0",
+    "npm": "8.1.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "run": "set PORT=4012 && react-scripts start",
