--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "npm": "8.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "run": "set PORT=4012 && react-scripts start",
+    "start": "set PORT=4012 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
